# cft-project

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: database.py  dependencies.py  log_config.py  main.py  models.py  utils.py
src/auth/: router.py  schemas.py  service.py  utils.py
src/bookings/: router.py  schemas.py  service.py
src/rooms/: router.py  schemas.py  service.py
src/users/: service.py
tests/: test_service.py
