[project]
name = "cft-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pyjwt (>=2.13.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
